[gd_scene load_steps=14 format=2]

[ext_resource path="res://Environment/Items/000_0001_crystal9.png" type="Texture" id=1]
[ext_resource path="res://Environment/Items/000_0008_crystal2.png" type="Texture" id=2]
[ext_resource path="res://Environment/Items/000_0009_crystal.png" type="Texture" id=3]
[ext_resource path="res://Environment/Items/000_0007_crystal3.png" type="Texture" id=4]
[ext_resource path="res://Environment/Items/000_0003_crystal7.png" type="Texture" id=5]
[ext_resource path="res://Environment/Items/000_0006_crystal4.png" type="Texture" id=6]
[ext_resource path="res://Environment/Items/000_0004_crystal6.png" type="Texture" id=7]
[ext_resource path="res://Environment/Items/000_0005_crystal5.png" type="Texture" id=8]
[ext_resource path="res://Environment/Items/000_0002_crystal8.png" type="Texture" id=9]
[ext_resource path="res://Environment/Items/000_0000_crystal10.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Gem.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]

[node name="Gem" type="Area2D"]
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="." to="." method="_on_Gem_body_entered"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
